--- a/.github/workflows/common-verify-code.yaml
+++ b/.github/workflows/common-verify-code.yaml
@@ -32,10 +32,10 @@ jobs:
     - name: Format check
       run: make format
 
-    # FIXME(Jing Yan): once the following static checks are fixed, uncomment the following steps.
-    # - name: Lint check
-    #   run: make lint
+    - name: Lint check
+      run: make lint
 
+    # FIXME(Jing Yan): once the following static checks are fixed, uncomment the following steps.
     # - name: Shell check
     #   run: make shellcheck
 
