--- a/.github/workflows/common-verify-code.yaml
+++ b/.github/workflows/common-verify-code.yaml
@@ -28,14 +28,15 @@ jobs:
       run: |
         go install -v github.com/golangci/golangci-lint/cmd/golangci-lint@latest
         go install -v github.com/fzipp/gocyclo/cmd/gocyclo@latest
+        go install -v golang.org/x/lint/golint@latest
 
     - name: Format check
       run: make format
 
-    # FIXME(Jing Yan): once the following static checks are fixed, uncomment the following steps.
-    # - name: Lint check
-    #   run: make lint
+    - name: Lint check
+      run: make lint
 
+    # FIXME(Jing Yan): once the following static checks are fixed, uncomment the following steps.
     # - name: Shell check
     #   run: make shellcheck
 
