--- a/.github/workflows/common-verify-code.yaml
+++ b/.github/workflows/common-verify-code.yaml
@@ -53,3 +53,8 @@ jobs:
 
   codeql-scan:
     uses: "./.github/workflows/common-codeql.yaml"
+
+  trivy-scan:
+    uses: "./.github/workflows/common-trivy.yaml"
+    with:
+      upload-to-github-security-tab: true
