ci: add top level default permissions to workflows
Signed-off-by: Antti Kervinen <antti.kervinen@intel.com>

--- a/.github/workflows/common-trivy.yaml
+++ b/.github/workflows/common-trivy.yaml
@@ -11,6 +11,10 @@ on:
         required: false
         type: boolean
 
+permissions:
+  contents: read
+  security-events: write
+
 jobs:
   trivy-scan-licenses:
     runs-on: ubuntu-22.04
