--- a/.github/workflows/common-codeql.yaml
+++ b/.github/workflows/common-codeql.yaml
@@ -2,6 +2,10 @@ name: CodeQL scanning
 on:
   workflow_call:
 
+permissions:
+  contents: read
+  security-events: write
+
 jobs:
   codeql-scan:
     runs-on: ubuntu-22.04
