--- a/.github/workflows/verify-pr-code.yaml
+++ b/.github/workflows/verify-pr-code.yaml
@@ -6,6 +6,10 @@ on:
       - "docs/**"
       - "**.md"
 
+permissions:
+  contents: read
+  security-events: write
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
   cancel-in-progress: true
