Fix github workflow tokens with excessive permissions
Signed-off-by: Jing Yan <jing1.yan@intel.com>

--- a/.github/workflows/common-codeql.yaml
+++ b/.github/workflows/common-codeql.yaml
@@ -4,11 +4,12 @@ on:
 
 permissions:
   contents: read
-  security-events: write
 
 jobs:
   codeql-scan:
     runs-on: ubuntu-22.04
+    permissions:
+        security-events: write
 
     steps:
     - name: Checkout
