ci: from golint to revive, fix emptylines, disable shellcheck
- Add configuration for golangci-lint.
- Disable all golangci-lint checkers that report errors at this point.
- Fix all empty-lines checker errors.
- Disable shellcheck in CI until it passes.

Signed-off-by: Antti Kervinen <antti.kervinen@intel.com>

--- a/.github/workflows/common-verify-code.yaml
+++ b/.github/workflows/common-verify-code.yaml
@@ -49,11 +49,11 @@ jobs:
     - name: Format check
       run: make format
 
-    - name: Lint check
-      run: make lint
-
-    - name: Shell check
-      run: make shellcheck
+    # TODO: enable shellcheck to check only changed code files
+    # or fix issues so that it will not fail.
+    # Currently it sometimes passes sometimes fails CI, which is weird.
+    # - name: Shell check
+    #   run: make shellcheck
 
     - name: Golangci lint check
       run: make golangci-lint
